[tool.poetry]
name = "tg-login"
version = "0.0.4"
description = "A command line tool to login into Telegram with user or bot accounts."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aahnik/tg-login"


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=0.21,<1.1"
Telethon = "^1.25.1"
typer = ">=0.7,<0.13"

[tool.poetry.dev-dependencies]
black = "^24.4"
pytest = "^8.2.2"
tox = "^4.15.1"
pylint = "^3.2.3"
isort = "^5.13.2"

[tool.poetry.scripts]
tg-login = 'tg_login.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
